Corrige mapeamento e ordenação de notícias IBGE, garantindo datas corretas e exibição robusta